# slite

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: test.yml
assets/: sql.packdump
crates/schemalite/: Cargo.toml
crates/schemalite-cli/: Cargo.toml
crates/schemalite-cli/src/: diff_view.rs  lib.rs  schema_view.rs
crates/schemalite/assets/: sql.packdump
crates/schemalite/src/: ansi_sql_printer.rs  color.rs  connection.rs  default_sql_printer.rs  diff.rs  error.rs  lib.rs  lib_test.rs  tui.rs  unified_diff_builder.rs
crates/schemalite/src/tui/: app.rs  broadcast_writer.rs  button.rs  diff.rs  migrate.rs  mod.rs  objects.rs  schema.rs  sql.rs
demo/: slite.toml
demo/schema/: 20-combined_view.sql  album.sql
src/: ansi_sql_printer.rs  color.rs  connection.rs  default_sql_printer.rs  diff.rs  error.rs  lib.rs  lib_test.rs  metadata.rs  read_files.rs  unified_diff_builder.rs
src/tui/: app.rs  broadcast_writer.rs  button.rs  migrate.rs  migrator_factory.rs  mod.rs  objects.rs  panel.rs  reloadable_config.rs  scrollable.rs  sql.rs
src/tui/components/: mod.rs  objects.rs  panels.rs  sql.rs  sql_objects.rs  tabs.rs
src/tui_old/: app.rs  broadcast_writer.rs  button.rs  migrator_factory.rs  reloadable_config.rs  sql.rs
test/: slite.toml
test/schema/: 10-full_text_search.sql  song.sql
test/snapshots/: slite__app_tui__app_tui_test__dry_run.snap  slite__app_tui__app_tui_test__generate_script.snap  slite__app_tui__app_tui_test__load.snap  slite__app_tui__app_tui_test__scroll_down.snap  slite__app_tui__app_tui_test__view_target.snap
util/gen-syntax/: Cargo.toml  Makefile.toml
util/gen-syntax/assets/SQL/: SQL.sublime-syntax
util/gen-syntax/src/: main.rs
