[package]
authors = ["Austin Schey <aschey13@gmail.com>"]
description = "Declarative migrations and schema management for SQLite"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "slite"
readme = "README.md"
repository = "https://github.com/aschey/slite"
version = "0.0.1-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "3.1.0"
arc-swap = { version = "1.6.0", optional = true }
atty = { version = "0.2.14", optional = true }
chrono = { version = "0.4.26", optional = true }
clap = { version = "4.3.11", features = ["derive", "cargo"], optional = true }
clap_complete = { version = "4.3.2", optional = true }
color-eyre = { version = "0.6.2", optional = true }
confique = { version = "0.2.4", default-features = false, features = [
  "toml",
], optional = true }
content_inspector = { version = "0.2.4", optional = true }
crossterm = { version = "0.27", optional = true }
futures = { version = "0.3.28", optional = true }
gix-discover = { version = "0.21.1", optional = true }
ignore = { version = "0.4.20", optional = true }
imara-diff = { version = "0.1.5", optional = true }
minus = { version = "5.3.1", features = ["dynamic_output"], optional = true }
normpath = { version = "1.1.1", optional = true }
notify = { version = "6.0.1", default_features = false, features = [
  "macos_fsevent",
], optional = true }
notify-debouncer-mini = { version = "0.3.0", default_features = false, optional = true }
once_cell = "1"
owo-colors = { version = "3", features = ["supports-colors"], optional = true }
ratatui = { version = "0.23", optional = true }
regex = "1"
rooibos = { path = "../rooibos/crates/rooibos", optional = true }
rusqlite = { version = "0.29", features = ["bundled", "load_extension"] }
serde = { version = "1.0.152", optional = true }
serde_regex = { version = "1.1.0", optional = true }
syntect = { version = "5", default-features = false, features = [
  "regex-fancy",
  "parsing",
], optional = true }
thiserror = "1"
tokio = { version = "1", features = [
  "sync",
  "rt-multi-thread",
], optional = true }
tokio-stream = { version = "0.1.14", features = ["sync"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
], optional = true }

tracing-tree2 = { git = "https://github.com/aschey/tracing-tree", rev = "8b37c33ae50608a1cc948b64dde3434fcf683ed9", optional = true } #{version = "0.3.0", optional = true}
tilia = { git = "https://github.com/aschey/tilia", rev = "41e0f16f92de09348479e71c95e2686423899f96", features = [
  "ipc",
] }
indexmap = { version = "2", optional = true }

[features]
application = [
  "clap",
  "clap_complete",
  "crossterm-events",
  "crossterm/event-stream",
  "diff",
  "pretty-print",
  "read-files",
  "gix-discover",
  "tui",
  "color-eyre",
  "tracing-tree2",
  "notify",
  "notify-debouncer-mini",
  "futures",
  "tokio/macros",
  "serde",
  "serde_regex",
  "confique",
  "arc-swap",
  "minus",
  "atty",
  "normpath",
]
crossterm-events = ["crossterm"]
default = ["application"]
diff = ["imara-diff"]
pretty-print = ["owo-colors", "syntect"]
read-files = ["ignore", "content_inspector"]
tui = [
  "ratatui",
  "tokio",
  "tokio-stream",
  "tracing-subscriber",
  "crossterm",
  "read-files",
  "chrono",
  "rooibos",
  "indexmap",
]

[dev-dependencies]
# elm-ui-tester = { git = "https://github.com/aschey/elm-ui-rs", rev = "f08df00754d0658eb24f30e7d0e167fd25ed7284", features = [
#   "tui",
#   "crossterm",
# ] }
#elm-ui-tester = {path = "../elm-ui-rs/crates/elm-ui-tester", features = ["tui", "crossterm"]}
insta = { version = "1.31.0", features = ["filters"] }
rstest = "0.18.1"
serial_test = "2.0.0"
tempfile = "3.4.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
