[package]
authors = ["Austin Schey <aschey13@gmail.com>"]
description = "Declarative migrations and schema management for SQLite"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "slite"
readme = "README.md"
repository = "https://github.com/aschey/slite"
version = "0.0.1-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "4"
arc-swap = { version = "1.6.0", optional = true }
chrono = { version = "0.4", optional = true }
clap = { version = "4.5.4", features = ["derive", "cargo"], optional = true }
clap_complete = { version = "4.5.1", optional = true }
color-eyre = { version = "0.6.3", optional = true }
confique = { version = "0.2.5", default-features = false, features = [
  "toml",
], optional = true }
content_inspector = { version = "0.2.4", optional = true }
crossterm = { version = "0.27", optional = true }
elm-ui = { git = "https://github.com/aschey/elm-ui-rs", rev = "b76cf0c51c628cbd574812cd0703cdef90618201", optional = true, features = [
  "crossterm",
] }
futures = { version = "0.3.30", optional = true }
gix-discover = { version = "0.31.0", optional = true }
ignore = { version = "0.4.22", optional = true }
imara-diff = { version = "0.1", optional = true }
minus = { version = "5.6.0", features = ["dynamic_output"], optional = true }
normpath = { version = "1.2.0", optional = true }
notify = { version = "6.1.1", default_features = false, features = [
  "macos_fsevent",
], optional = true }
notify-debouncer-mini = { version = "0.4.1", default_features = false, optional = true }
once_cell = "1"
owo-colors = { version = "4", features = ["supports-colors"], optional = true }
regex = "1"
rusqlite = { version = "0.29", features = ["bundled", "load_extension"] }
serde = { version = "1.0.197", optional = true }
serde_regex = { version = "1.1.0", optional = true }
syntect = { version = "5", default-features = false, features = [
  "regex-fancy",
  "parsing",
], optional = true }
thiserror = "1"
tokio = { version = "1", features = [
  "sync",
  "rt-multi-thread",
], optional = true }
tokio-stream = { version = "0.1.15", features = ["sync"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
tracing-tree2 = { git = "https://github.com/aschey/tracing-tree", rev = "8b37c33ae50608a1cc948b64dde3434fcf683ed9", optional = true } #{version = "0.3.0", optional = true}
ratatui = { version = "0.26.1", optional = true }

[features]
application = [
  "clap",
  "clap_complete",
  "crossterm-events",
  "crossterm/event-stream",
  "diff",
  "pretty-print",
  "read-files",
  "gix-discover",
  "tui",
  "color-eyre",
  "tracing-tree2",
  "notify",
  "notify-debouncer-mini",
  "futures",
  "tokio/macros",
  "serde",
  "serde_regex",
  "confique",
  "arc-swap",
  "minus",
  "normpath",
]
crossterm-events = ["crossterm"]
default = ["application"]
diff = ["imara-diff"]
pretty-print = ["owo-colors", "syntect"]
read-files = ["ignore", "content_inspector"]
tui = [
  "dep:ratatui",
  "elm-ui",
  "tokio",
  "tokio-stream",
  "tracing-subscriber",
  "crossterm",
  "read-files",
  "chrono",
]

[dev-dependencies]
elm-ui-tester = { git = "https://github.com/aschey/elm-ui-rs", rev = "b76cf0c51c628cbd574812cd0703cdef90618201", features = [
  "tui",
  "crossterm",
] }
#elm-ui-tester = {path = "../elm-ui-rs/crates/elm-ui-tester", features = ["tui", "crossterm"]}
insta = { version = "1.31.0", features = ["filters"] }
rstest = "0.18.1"
serial_test = "3.0.0"
tempfile = "3.4.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
