[package]
edition = "2021"
name = "schemalite-cli"
version = "0.1.0"

[[bin]]
doc = false
name = "slite"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.32", features = ["derive"]}
rusqlite = {version = "0.28.0", features = ["bundled"]}
schemalite = {path = "../schemalite", features = ["pretty-print"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-tree = {path = "../../../tracing-tree"}
