[package]
edition = "2021"
name = "schemalite-cli"
version = "0.1.0"

[[bin]]
doc = false
name = "slite"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "2.0.0"
clap = {version = "4.0.32", features = ["derive"]}
crossterm = "0.25.0"
rusqlite = {version = "0.28.0", features = ["bundled"]}
schemalite = {path = "../schemalite", features = ["pretty-print", "diff", "tui"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-tree = {git = "https://github.com/aschey/tracing-tree", rev = "f81502acc9bc1e2baea22386896e7ee15e15c924"}
tui = "0.19.0"
