[package]
edition = "2021"
name = "schemalite-cli"
version = "0.1.0"

[[bin]]
doc = false
name = "slite"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.32", features = ["derive"]}
color-eyre = "0.6.2"
confique = "0.2.2"
crossterm = {version = "0.26.0", features = ["event-stream"]}
futures = "0.3.25"
notify = {version = "5.1.0", default_features = false, features = ["macos_fsevent"]}
notify-debouncer-mini = {version = "0.2.1", default_features = false}
rusqlite = {version = "0.28.0", features = ["bundled"]}
schemalite = {path = "../schemalite", features = ["pretty-print", "diff", "tui", "crossterm-events"]}
tokio = {version = "1.24.2", features = ["rt-multi-thread", "macros", "sync"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-tree = {git = "https://github.com/aschey/tracing-tree", rev = "f81502acc9bc1e2baea22386896e7ee15e15c924"}
tui = "0.19.0"
