[package]
edition = "2021"
name = "schemalite"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imara-diff = {version = "0.1.5", optional = true}
once_cell = "1.17.0"
owo-colors = {version = "3.5.0", optional = true}
regex = "1.7.1"
rusqlite = {version = "0.28.0", features = ["bundled"]}
syntect = {version = "5.0.0", default-features = false, features = ["regex-fancy", "dump-load", "parsing"], optional = true}
thiserror = "1.0.38"
tracing = "0.1.37"

[features]
diff = ["imara-diff"]
pretty-print = ["owo-colors", "syntect"]

[dev-dependencies]
rstest = "0.16.0"
