[package]
edition = "2021"
name = "schemalite"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "2"
imara-diff = {version = "0.1", optional = true}
once_cell = "1"
owo-colors = {version = "3", optional = true}
regex = "1"
rusqlite = {version = "0.28", features = ["bundled"]}
syntect = {version = "5", default-features = false, features = ["regex-fancy", "dump-load", "parsing"], optional = true}
thiserror = "1"
tokio = {version = "1", features = ["sync"], optional = true}
tracing = "0.1"
tracing-subscriber = {version = "0.3", optional = true}
tui = {version = "0.19", optional = true}

[features]
diff = ["imara-diff"]
pretty-print = ["owo-colors", "syntect"]
tui = ["dep:tui", "tokio", "tracing-subscriber"]

[dev-dependencies]
rstest = "0.16.0"
